# finnish-electricity-price-prediction

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: daily_prediction.yml
data/: forecast_results.json
model/: model_features.pkl
notebooks/: data_pipeline.ipynb  model_training.ipynb
src/: fetch_data.py  predict.py
